--- a/css/application.css
+++ b/css/application.css
@@ -77,7 +77,7 @@ h1 {
 #urls .item {
   padding: 15px 20px 15px 0;
   position: relative;
-  font-size: 24px;
+  font-size: 21px;
   border-bottom: 1px solid #cccccc;
 }
 
@@ -104,7 +104,7 @@ h1 {
   cursor: pointer;
   width: 20px;
   height: 20px;
-  background: url(../images/destroy.png) no-repeat center center;
+  background: url(../images/statistics.png) no-repeat center center;
 }
 
 #urls .item:hover .toggleStats {
@@ -113,4 +113,15 @@ h1 {
 
 #urls .item .stats {
   display: none;
+}
+
+#urls .item .long{
+  clear:both;
+  display:block;
+  font-size:15px;
+  padding-top:5px;
+}
+
+.longUrl{
+  font-size:13px;
 }
